terminando coisas do pr
